--- a/app/src/main/res/layout/item_home_music.xml
+++ b/app/src/main/res/layout/item_home_music.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="480dp"
     android:layout_marginHorizontal="15dp"
     android:layout_marginTop="20dp"
     android:backgroundTint="@color/filled_gray"
@@ -50,9 +50,11 @@
 
         <ImageView
             android:id="@+id/imgTrack"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_marginTop="40dp"
+            android:background="@drawable/image_album"
+            android:clipToOutline="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11"
@@ -63,6 +65,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="32dp"
+            android:background="@drawable/image_album"
+            android:clipToOutline="true"
             app:layout_constraintStart_toStartOf="@+id/txtArtist"
             app:layout_constraintTop_toBottomOf="@+id/imgTrack"
             tools:srcCompat="@tools:sample/avatars" />
@@ -72,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="16sp"
