--- a/app/src/main/res/layout/item_library_album.xml
+++ b/app/src/main/res/layout/item_library_album.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:vumeter="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:backgroundTint="@color/primary"
@@ -55,6 +56,9 @@
             android:textColor="@color/txt_gray"
             app:layout_constraintStart_toStartOf="@+id/txtAlbumName"
             app:layout_constraintTop_toBottomOf="@+id/txtAlbumName" />
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
