--- a/app/src/main/res/layout/item_library_album.xml
+++ b/app/src/main/res/layout/item_library_album.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:vumeter="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
+    android:layout_marginBottom="8dp"
     android:backgroundTint="@color/filled_gray">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,11 +19,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            app:layout_constraintVertical_bias="0.7"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/album"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.7"
             app:srcCompat="@drawable/icon_more" />
 
         <ImageView
@@ -38,12 +37,12 @@
 
         <TextView
             android:id="@+id/txtAlbumName"
-
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
+            android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -58,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="Album"
+            android:maxLines="1"
             android:textColor="@color/txt_gray"
             app:layout_constraintStart_toStartOf="@+id/txtAlbumName"
             app:layout_constraintTop_toBottomOf="@+id/txtAlbumName" />
