--- a/app/src/main/res/layout/item_search_card.xml
+++ b/app/src/main/res/layout/item_search_card.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="169dp"
     android:layout_height="109dp"
-    android:backgroundTint="@color/card_green"
+    android:id="@+id/cardView"
+    tools:backgroundTint="@color/card_green"
     android:layout_marginEnd="10dp"
     android:layout_marginTop="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
