--- a/app/src/main/res/anim/slide_out.xml
+++ b/app/src/main/res/anim/slide_out.xml
@@ -1,6 +1,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:fromYDelta="100%"
-        android:toYDelta="0"
-        android:duration="1000" />
+        android:fromXDelta="-100%p"
+        android:toXDelta="0"
+        android:duration="200"/>
 </set>
