--- a/app/src/main/res/layout/fragment_album_view.xml
+++ b/app/src/main/res/layout/fragment_album_view.xml
@@ -33,7 +33,8 @@
         android:id="@+id/imgBack"
 
         android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:src="@drawable/icon_arrow_back"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -43,7 +44,7 @@
         android:layout_width="300dp"
         android:layout_height="250dp"
         android:layout_marginTop="24dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:background="@drawable/image_album"
         android:clipToOutline="true"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
@@ -60,6 +61,8 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         style="@style/BoldText"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
